--- a/docs-store/com/spotify/sdk/android/auth/store/PlayStoreHandler.html
+++ b/docs-store/com/spotify/sdk/android/auth/store/PlayStoreHandler.html
@@ -137,7 +137,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <pre>public class <span class="typeNameLabel">PlayStoreHandler</span>
 extends java.lang.Object
 implements <a href="../AuthorizationHandler.html" title="interface in com.spotify.sdk.android.auth">AuthorizationHandler</a></pre>
-<div class="block">An AuthorizationHandler that opens the play store to download the main spotify application</div>
+<div class="block">An AuthorizationHandler that opens the play store to download the main Spotify application</div>
 </li>
 </ul>
 </div>
