--- a/docs-store/com/spotify/sdk/android/auth/store/package-summary.html
+++ b/docs-store/com/spotify/sdk/android/auth/store/package-summary.html
@@ -107,7 +107,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <tr class="altColor">
 <th class="colFirst" scope="row"><a href="PlayStoreHandler.html" title="class in com.spotify.sdk.android.auth.store">PlayStoreHandler</a></th>
 <td class="colLast">
-<div class="block">An AuthorizationHandler that opens the play store to download the main spotify application</div>
+<div class="block">An AuthorizationHandler that opens the play store to download the main Spotify application</div>
 </td>
 </tr>
 </tbody>
