--- a/docs-store/allclasses-index.html
+++ b/docs-store/allclasses-index.html
@@ -180,7 +180,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <tr id="i13" class="rowColor">
 <td class="colFirst"><a href="com/spotify/sdk/android/auth/store/PlayStoreHandler.html" title="class in com.spotify.sdk.android.auth.store">PlayStoreHandler</a></td>
 <th class="colLast" scope="row">
-<div class="block">An AuthorizationHandler that opens the play store to download the main spotify application</div>
+<div class="block">An AuthorizationHandler that opens the play store to download the main Spotify application</div>
 </th>
 </tr>
 <tr id="i14" class="altColor">
